--- a/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_ru.html
+++ b/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_ru.html
@@ -209,7 +209,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>LK14d. Урегулирование</div>
+            <div>LK14d. Пункт населения</div>
             <div>
                 <select id="lk14d" name="lk14d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -253,25 +253,21 @@
                     <input id="lk15-3" type="radio" value="3" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="lk15-3" class="ms-2 text-sm text-gray-900">3. Директор учреждения</label>
                 </div>
-                    <div class="flex items-center">
-                        <input id="lk15-4" type="radio" value="4" name="lk15"
-                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="lk15-4" class="ms-2 text-sm text-gray-900">4. Другие сотрудники учреждения</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="lk15-5" type="radio" value="5" name="lk15"
-                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="lk15-5" class="ms-2 text-sm text-gray-900">5. Еще один госслужащий</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="lk15-6" type="radio" value="6" name="lk15"
-                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="lk15-6" class="ms-2 text-sm text-gray-900">6. Если другой, укажите</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input type="text" id="lk15_other" name="lk15_other"
-                            class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
-                    </div>
+                <div class="flex items-center">
+                    <input id="lk15-4" type="radio" value="4" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="lk15-4" class="ms-2 text-sm text-gray-900">4. Другие сотрудники учреждения</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="lk15-5" type="radio" value="5" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="lk15-5" class="ms-2 text-sm text-gray-900">5. Еще один госслужащий</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="lk15-6" type="radio" value="6" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="lk15-6" class="ms-2 text-sm text-gray-900">6. Если другой, укажите</label>
+                </div>
+                <div class="flex items-center">
+                    <input type="text" id="lk15_other" name="lk15_other" class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+                </div>
             </div>
         </div>
 
@@ -438,7 +434,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>CM3d. Урегулирование</div>
+            <div>CM3d. Пункт населения</div>
             <div>
                 <select id="cm3d" name="cm3d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -990,7 +986,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>CM10e. Урегулирование</div>
+            <div>CM10e. Пункт населения</div>
             <div>
                 <select id="cm10e" name="cm10e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -1048,7 +1044,7 @@
         </div>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>e. Урегулирование</div>
+            <div>e. Пункт населения</div>
             <div>
                 <select id="cm11e" name="cm11e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -1057,7 +1053,7 @@
             </div>
         </div>
 
-        <input type="hidden" id="cm11f" name="cm11f"/>
+        <input type="hidden" id="cm11f" name="cm11f" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>Адрес:</div>
@@ -1243,7 +1239,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>CT3d. Урегулирование</div>
+            <div>CT3d. Пункт населения</div>
             <div>
                 <select id="ct3d" name="ct3d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -1252,7 +1248,7 @@
             </div>
         </div>
 
-        <input type="hidden" id="ct3e" name="ct3e"/>
+        <input type="hidden" id="ct3e" name="ct3e" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>СТ4. Этническая принадлежность (национальность) отца</div>
@@ -1791,7 +1787,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>e. Урегулирование</div>
+            <div>e. Пункт населения</div>
             <div>
                 <select id="ct10e" name="ct10e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -1849,7 +1845,7 @@
         </div>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>e. Урегулирование</div>
+            <div>e. Пункт населения</div>
             <div>
                 <select id="ct11e" name="ct11e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -1877,6 +1873,16 @@
         <!-- CAREGIVER -->
         <h3 class="text-xl mt-10 mb-2 font-semibold bg-gray-100 px-2 py-1 text-gray-700">3.3. ЛИЦО, КОТОРОЕ ЗАБОТИЛОСЬ О РЕБЕНКЕ</h3>
         <small class="block italic text-red-500">Этот раздел заполняется только в том случае, если до поступления в систему ребенок находился под опекой  кого-либо, кроме матери или отца ребенка. В ином случае перейдите к разделу 4.</small>
+
+        <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div>
+                CG0.
+            </div>
+            <div class="flex gap-4">
+                <input id="cg0" name="cg0" type="checkbox" value="9" class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
+                <label for="cg0" class="ms-2 text-sm text-gray-900"> &quot;Проверяйте только, если до поступления в интернат ребенок находился под опекой кого-либо, кроме матери или отца ребенка. В противном случае перейдите к разделу 4.&quot; </label>
+            </div>
+        </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CG1a. Каково взаимоотношение между ребенком и лицом, которое заботится  о нем?</div>
@@ -1916,7 +1922,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CG1d. Родственные связи: </div>
-             <div class="flex flex-col gap-2">
+            <div class="flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="cg1d-1" type="radio" value="1" name="cg1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="cg1d-1" class="ms-2 text-sm text-gray-900">1. Брат/Сестра (2-я степень)</label>
@@ -2544,7 +2550,7 @@
             </div>
         </div>
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>e. Урегулирование</div>
+            <div>e. Пункт населения</div>
             <div>
                 <select id="cg10e" name="cg10e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -2597,7 +2603,7 @@
         </div>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>e. Урегулирование</div>
+            <div>e. Пункт населения</div>
             <div>
                 <select id="cg11e" name="cg11e" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -2606,7 +2612,7 @@
             </div>
         </div>
 
-        <input type="hidden" id="cg11f" name="cg11f"/>
+        <input type="hidden" id="cg11f" name="cg11f" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>Адрес:</div>
@@ -2695,7 +2701,7 @@
         </div>
 
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
-            <div>SA3c. Урегулирование</div>
+            <div>SA3c. Пункт населения</div>
             <div>
                 <select id="sa3c" name="sa3c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
@@ -2755,8 +2761,7 @@
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>SA5r. Область</div>
             <div>
-                <select id="sa5r" name="sa5r"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="sa5r" name="sa5r" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -2765,8 +2770,7 @@
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>SA5d. Район </div>
             <div>
-                <select id="sa5d" name="sa5d"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="sa5d" name="sa5d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -2775,8 +2779,7 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>SA5i. учреждение</div>
             <div class="flex gap-4">
-                <select id="sa5i" name="sa5i"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="sa5i" name="sa5i" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -2785,16 +2788,14 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>SA5n. Название учреждения</div>
             <div>
-                <input type="text" id="sa5n" name="sa5n"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <input type="text" id="sa5n" name="sa5n" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>SA5t. Тип учреждения</div>
             <div>
-                <select id="sa5t" name="sa5t"
-                        class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
+                <select id="sa5t" name="sa5t" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option selected value="-9" class="t_choose">------</option>
                     <option value="11">1. Дом « Мехрибонлик»</option>
                     <option value="12">2. Дом-интернат «Мурувват» для детей с инвалидностью</option>
@@ -4884,8 +4885,8 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                <p class="mb-2">ЕCЛИ ИНТЕЛЛЕКТУАЛЬНАЯ ИНВАЛИДНОСТЬ ОТМЕЧЕНА В LK22_2<p>
-                LK22_2m. Cогласно справке об инвалидности, какая степень инвалидности у ребенка?            </div>
+                <p class="mb-2">ЕCЛИ ИНТЕЛЛЕКТУАЛЬНАЯ ИНВАЛИДНОСТЬ ОТМЕЧЕНА В LK22_2                <p>
+                    LK22_2m. Cогласно справке об инвалидности, какая степень инвалидности у ребенка?            </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="lk22_2m-1" type="radio" value="1" name="lk22_2m" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5405,7 +5406,7 @@
                     <input id="ewm1-1" type="radio" value="1" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ewm1-1" class="ms-2 text-sm text-gray-900">1. Да</label>
                 </div>
-                                <div class="flex items-center">
+                <div class="flex items-center">
                     <input id="ewm1-0" type="radio" value="0" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ewm1-0" class="ms-2 text-sm text-gray-900">0. Нет</label>
                 </div>
@@ -5473,7 +5474,7 @@
                 <div class="flex items-center">
                     <input id="ewm5-0" type="radio" value="0" name="ewm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ewm5-0" class="ms-2 text-sm text-gray-900">0. Нет</label>
-                </div>                
+                </div>
             </div>
         </div>
 
