--- a/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_en.html
+++ b/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_en.html
@@ -253,25 +253,21 @@
                     <input id="lk15-3" type="radio" value="3" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="lk15-3" class="ms-2 text-sm text-gray-900">3. The director of the institution</label>
                 </div>
-                    <div class="flex items-center">
-                        <input id="lk15-4" type="radio" value="4" name="lk15"
-                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="lk15-4" class="ms-2 text-sm text-gray-900">4. Other staff of the institution</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="lk15-5" type="radio" value="5" name="lk15"
-                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="lk15-5" class="ms-2 text-sm text-gray-900">5. Another state employee</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="lk15-6" type="radio" value="6" name="lk15"
-                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="lk15-6" class="ms-2 text-sm text-gray-900">6. Other, please specify</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input type="text" id="lk15_other" name="lk15_other"
-                            class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
-                    </div>
+                <div class="flex items-center">
+                    <input id="lk15-4" type="radio" value="4" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="lk15-4" class="ms-2 text-sm text-gray-900">4. Other staff of the institution</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="lk15-5" type="radio" value="5" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="lk15-5" class="ms-2 text-sm text-gray-900">5. Another state employee</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="lk15-6" type="radio" value="6" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="lk15-6" class="ms-2 text-sm text-gray-900">6. Other, please specify</label>
+                </div>
+                <div class="flex items-center">
+                    <input type="text" id="lk15_other" name="lk15_other" class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+                </div>
             </div>
         </div>
 
@@ -1057,7 +1053,7 @@
             </div>
         </div>
 
-        <input type="hidden" id="cm11f" name="cm11f"/>
+        <input type="hidden" id="cm11f" name="cm11f" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>Address:</div>
@@ -1252,7 +1248,7 @@
             </div>
         </div>
 
-        <input type="hidden" id="ct3e" name="ct3e"/>
+        <input type="hidden" id="ct3e" name="ct3e" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CT4. Father&#39;s ethnicity (nationality)</div>
@@ -1879,6 +1875,16 @@
         <small class="block italic text-red-500">This section is to be filled in only if before entering the system, the child was under the care of someone other than the child&#39;s mother or father. Otherwise, skip to Section 4.</small>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div>
+                CG0.
+            </div>
+            <div class="flex gap-4">
+                <input id="cg0" name="cg0" type="checkbox" value="9" class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
+                <label for="cg0" class="ms-2 text-sm text-gray-900"> &quot;Check only if before being admitted in the boarding school, the child was under the care of someone other than the child&#39;s mother or father. Otherwise, skip to Section 4.&quot; </label>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CG1a. What is the relationship between the child and the person taking care of them?</div>
             <div class="flex gap-4">
                 <div class="flex items-center">
@@ -1916,7 +1922,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CG1d. Kinship relation: </div>
-             <div class="flex flex-col gap-2">
+            <div class="flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="cg1d-1" type="radio" value="1" name="cg1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="cg1d-1" class="ms-2 text-sm text-gray-900">1. Brother / Sister (2nd degree)</label>
@@ -2606,7 +2612,7 @@
             </div>
         </div>
 
-        <input type="hidden" id="cg11f" name="cg11f"/>
+        <input type="hidden" id="cg11f" name="cg11f" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>Address:</div>
@@ -2755,8 +2761,7 @@
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>SA5r. Region</div>
             <div>
-                <select id="sa5r" name="sa5r"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="sa5r" name="sa5r" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -2765,8 +2770,7 @@
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>SA5d. District</div>
             <div>
-                <select id="sa5d" name="sa5d"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="sa5d" name="sa5d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -2775,8 +2779,7 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>SA5i. Institution</div>
             <div class="flex gap-4">
-                <select id="sa5i" name="sa5i"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="sa5i" name="sa5i" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -2785,16 +2788,14 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>SA5n. Institution name</div>
             <div>
-                <input type="text" id="sa5n" name="sa5n"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <input type="text" id="sa5n" name="sa5n" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>SA5t. Type of institution</div>
             <div>
-                <select id="sa5t" name="sa5t"
-                        class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
+                <select id="sa5t" name="sa5t" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option selected value="-9" class="t_choose">------</option>
                     <option value="11">1. Mehribonlik house</option>
                     <option value="12">2. Muruvat house for children with disabilities</option>
@@ -4884,8 +4885,8 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                <p class="mb-2">IF MENTAL DISABILITY IS CHECKED IN LK22_2<p>
-                LK22_2m. According to the certificate, what degree of disability does the child experience?            </div>
+                <p class="mb-2">IF MENTAL DISABILITY IS CHECKED IN LK22_2                <p>
+                    LK22_2m. According to the certificate, what degree of disability does the child experience?            </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="lk22_2m-1" type="radio" value="1" name="lk22_2m" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5405,7 +5406,7 @@
                     <input id="ewm1-1" type="radio" value="1" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ewm1-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                 </div>
-                                <div class="flex items-center">
+                <div class="flex items-center">
                     <input id="ewm1-0" type="radio" value="0" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ewm1-0" class="ms-2 text-sm text-gray-900">0. No</label>
                 </div>
@@ -5473,7 +5474,7 @@
                 <div class="flex items-center">
                     <input id="ewm5-0" type="radio" value="0" name="ewm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ewm5-0" class="ms-2 text-sm text-gray-900">0. No</label>
-                </div>                
+                </div>
             </div>
         </div>
 
