--- a/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_uz.html
+++ b/src/templates/1_UZ_ChildDI_Children_in_the_child_care_system_uz.html
@@ -253,25 +253,21 @@
                     <input id="lk15-3" type="radio" value="3" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="lk15-3" class="ms-2 text-sm text-gray-900">3. Muassasa direktori</label>
                 </div>
-                    <div class="flex items-center">
-                        <input id="lk15-4" type="radio" value="4" name="lk15"
-                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="lk15-4" class="ms-2 text-sm text-gray-900">4. Tashkilotning boshqa xodimlari</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="lk15-5" type="radio" value="5" name="lk15"
-                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="lk15-5" class="ms-2 text-sm text-gray-900">5. Yana bir davlat xodimi</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="lk15-6" type="radio" value="6" name="lk15"
-                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="lk15-6" class="ms-2 text-sm text-gray-900">6. Agar boshqa bo&#39;lsa, ko&#39;rsatilsin</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input type="text" id="lk15_other" name="lk15_other"
-                            class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
-                    </div>
+                <div class="flex items-center">
+                    <input id="lk15-4" type="radio" value="4" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="lk15-4" class="ms-2 text-sm text-gray-900">4. Tashkilotning boshqa xodimlari</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="lk15-5" type="radio" value="5" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="lk15-5" class="ms-2 text-sm text-gray-900">5. Yana bir davlat xodimi</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="lk15-6" type="radio" value="6" name="lk15" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="lk15-6" class="ms-2 text-sm text-gray-900">6. Agar boshqa bo&#39;lsa, ko&#39;rsatilsin</label>
+                </div>
+                <div class="flex items-center">
+                    <input type="text" id="lk15_other" name="lk15_other" class="bg-white disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+                </div>
             </div>
         </div>
 
@@ -1057,7 +1053,7 @@
             </div>
         </div>
 
-        <input type="hidden" id="cm11f" name="cm11f"/>
+        <input type="hidden" id="cm11f" name="cm11f" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>Manzil:</div>
@@ -1252,7 +1248,7 @@
             </div>
         </div>
 
-        <input type="hidden" id="ct3e" name="ct3e"/>
+        <input type="hidden" id="ct3e" name="ct3e" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CT4. Otaning etnik kelib chiqishi (millati)</div>
@@ -1879,6 +1875,16 @@
         <small class="block italic text-red-500">Ushbu bo&#39;lim, agar bola tizimga qabul qilinishdan oldin, o&#39;z onasi yoki otasi emas, balki boshqa birovning qaramog&#39;ida bo&#39;lgan holatda to&#39;ldirilishi zarur. Aks holda, 4-bo&#39;limga o&#39;ting.</small>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
+            <div>
+                CG0.
+            </div>
+            <div class="flex gap-4">
+                <input id="cg0" name="cg0" type="checkbox" value="9" class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
+                <label for="cg0" class="ms-2 text-sm text-gray-900"> &quot;Agar bola maktab-internatga qabul qilinishidan oldin bolaning onasi yoki otasi emas, balki boshqa birovning qaramog&#39;ida bo&#39;lgan bo&#39;lsa, tekshiring. Aks holda, 4-bo&#39;limga o&#39;ting.&quot; </label>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CG1a. Bola va uning vasiysi o&#39;rtasidagi munosabat qanday?</div>
             <div class="flex gap-4">
                 <div class="flex items-center">
@@ -1916,7 +1922,7 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>CG1d. Qarindoshlik aloqalari: </div>
-             <div class="flex flex-col gap-2">
+            <div class="flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="cg1d-1" type="radio" value="1" name="cg1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="cg1d-1" class="ms-2 text-sm text-gray-900">1. Aka / opa (2-darajali)</label>
@@ -2606,7 +2612,7 @@
             </div>
         </div>
 
-        <input type="hidden" id="cg11f" name="cg11f"/>
+        <input type="hidden" id="cg11f" name="cg11f" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>Manzil:</div>
@@ -2755,8 +2761,7 @@
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>SA5r. Viloyat</div>
             <div>
-                <select id="sa5r" name="sa5r"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="sa5r" name="sa5r" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -2765,8 +2770,7 @@
         <div class="grid grid-cols-2 items-center gap-4 mt-6">
             <div>SA5d. Tuman</div>
             <div>
-                <select id="sa5d" name="sa5d"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="sa5d" name="sa5d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -2775,8 +2779,7 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>SA5i. Muassasa</div>
             <div class="flex gap-4">
-                <select id="sa5i" name="sa5i"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select id="sa5i" name="sa5i" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option value="-9" class="t_choose">--- choose ---</option>
                 </select>
             </div>
@@ -2785,16 +2788,14 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>SA5n. Muassasa nomi</div>
             <div>
-                <input type="text" id="sa5n" name="sa5n"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <input type="text" id="sa5n" name="sa5n" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>SA5t. Muassasa turi</div>
             <div>
-                <select id="sa5t" name="sa5t"
-                        class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
+                <select id="sa5t" name="sa5t" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
                     <option selected value="-9" class="t_choose">------</option>
                     <option value="11">1. Mehribonlik uyi</option>
                     <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
@@ -4884,8 +4885,8 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-10">
             <div>
-                <p class="mb-2">AGAR LK22_2 DA INTELLEKTUAL NOGIRONLIK BELGILLANGAN B&#39;OLSA<p>
-                LK22_2m. Nogironlik to&#39;g&#39;risidagi guvohnomaga ko&#39;ra, bolada nogironlikning qanday darajasi?            </div>
+                <p class="mb-2">AGAR LK22_2 DA INTELLEKTUAL NOGIRONLIK BELGILLANGAN B&#39;OLSA                <p>
+                    LK22_2m. Nogironlik to&#39;g&#39;risidagi guvohnomaga ko&#39;ra, bolada nogironlikning qanday darajasi?            </div>
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="lk22_2m-1" type="radio" value="1" name="lk22_2m" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5405,7 +5406,7 @@
                     <input id="ewm1-1" type="radio" value="1" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ewm1-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                 </div>
-                                <div class="flex items-center">
+                <div class="flex items-center">
                     <input id="ewm1-0" type="radio" value="0" name="ewm1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ewm1-0" class="ms-2 text-sm text-gray-900">0. Yo&#39;q</label>
                 </div>
@@ -5473,7 +5474,7 @@
                 <div class="flex items-center">
                     <input id="ewm5-0" type="radio" value="0" name="ewm5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                     <label for="ewm5-0" class="ms-2 text-sm text-gray-900">0. Yo&#39;q</label>
-                </div>                
+                </div>
             </div>
         </div>
 
